abstract